Wed Jan 31 06:43:27 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/Message_Queue_T.cpp: Make sure that dequeue_head() returns
	  the number of items still on the queue.  Thanks to Johnny
	  Willemsen for reporting this.

Tue Jan 30 21:39:15 2001  Sharath R. Cholleti  <sharath@cs.wustl.edu>

       * tests/Log_Msg_Test.cpp: In funtion test_ostream(), removed the 
          if condition to check if ACE_OS::unlink() succeeds. Also set 
          the ostream to NULL before calling ACE_ERROR_RETURN(). Thanks 
          to Mike Curtis <mccurry@my-deja.com> for pointing out problem 
          caused when ACE_OS::unlink() fails. Thanks to Doug in helping 
          fix the problem.

Tue Jan 30 18:04:08 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* tests/Message_Queue_Test_Ex.cpp (single_thread_performance_test): 
	  Zap the Win32 and VxWorks-specific code from this function.
	  Thanks to Sharath for reporting this.

Tue Jan 30 11:26:42 2001  Steve Huston  <shuston@riverace.com>

        * examples/Reactor/Proactor/post_completions.cpp: Added a count
          to be sure that all expected completions are delivered, and
          print error message if not.

Tue Jan 30 10:47:52 2001  Steve Huston  <shuston@riverace.com>

        * ace/Select_Reactor_Base.cpp
          (ACE_Select_Reactor_Notify::purge_pending_notifications):
        * ace/WFMO_Reactor.cpp
          (ACE_WFMO_Reactor_Notify::purge_pending_notifications): Changed
          to not purge notifications destined for the reactor only
          (notification buffer with 0 handler value). Thanks to Edan
          Ayal <edana@bandwiz.com> for this fix.

Tue Jan 30 01:05:51 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* tests/Message_Queue_Test_Ex.cpp (single_thread_performance_test): 
	  Add cases for VxWorks and NT.  Thanks to Sharath for reporting
 	  this.

	* ace/OS.h: #define _SC_AIO_MAX to 1 if it's not set by default.