@@ -1,3 +1,12 @@
+Wed Jan 31 12:19:51 2001  Steve Huston  <shuston@riverace.com>
+
+        * docs/tutorials/Chap_2/ex03.html, ex04.html: Fixed these example
+          programs to 1) send the Nul terminators with the strings,
+          2) allow enough space on the recv to get it all, 3) return a
+          value from main.
+
+        * docs/tutorials/Chap_2/Chap_2.zip: Updated the above examples.
+
 Wed Jan 31 06:43:27 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>
 
 	* ace/Message_Queue_T.cpp: Make sure that dequeue_head() returns
